--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1"
+    "react-movable": "^2.2.0",
+    "react-scripts": "3.1.1",
+    "react-yandex-maps": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -29,7 +31,6 @@
     ]
   },
   "devDependencies": {
-    "node-sass": "^4.12.0",
-    "react-movable": "^2.2.0"
+    "node-sass": "^4.12.0"
   }
 }
