--- a/package.json
+++ b/package.json
@@ -32,5 +32,6 @@
   },
   "devDependencies": {
     "node-sass": "^4.12.0"
-  }
+  },
+  "homepage": "https://michael-ivonin.github.io/trip-editor"
 }
