--- a/package.json
+++ b/package.json
@@ -33,5 +33,5 @@
   "devDependencies": {
     "node-sass": "^4.12.0"
   },
-  "homepage": "https://michael-ivonin.github.io/trip-editor"
+  "homepage": "https://michael-ivonin.github.io/trip-editor/build"
 }
